menu bug fixed, some changes

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -65,10 +65,11 @@ a:hover {
 @media screen and (max-width: 768px) {
     .expanded, .closed {
         transition: var(--navTransition);
+        position: fixed;
     }
 
     .expanded{
-        transform: translateY(0);
+        transform: translateY(var(--navHeight));
     }
 
     .closed {
