--- a/src/index.css
+++ b/src/index.css
@@ -52,10 +52,6 @@ body {
   font-family: 'Roboto Mono', monospace;
 }
 
-section:nth-child(1){
-	padding-top: 0;
-}
-
 .App {
   counter-reset: my-awesome-counter;
 }
@@ -90,6 +86,10 @@ section:nth-child(1){
   flex-direction: column;
   align-items: center;
   width: 100%;
+}
+
+.section:nth-child(1){
+	padding-top: 20px;
 }
 
 .anim-typewriter{
